// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dismissable label should render dismissable label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root MuiChip-deletable"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
      <span
        aria-label="delete icon"
        class="Label-deleteIcon MuiChip-deleteIcon"
        role="button"
      >
        <svg
          class="SvgCloseMinor16-root"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders \`grey\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders \`white\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root Label-white"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
    </div>
  </div>
</div>
`;
